# PHiLiP

src/dg/: dg.cpp  dg.h  dg_factory.cpp  dg_factory.hpp  strong_dg.cpp  strong_dg.hpp  strong_dg_les.cpp  weak_dg.cpp  weak_dg.hpp
src/flow_solver/: CMakeLists.txt  flow_solver.cpp  flow_solver.h  flow_solver_factory.cpp
src/numerical_flux/: convective_numerical_flux.cpp
src/ode_solver/: explicit_ode_solver.cpp
src/operators/: operators.cpp  operators.h
src/parameters/: all_parameters.cpp  all_parameters.h  parameters_flow_solver.cpp  parameters_flow_solver.h  parameters_manufactured_convergence_study.cpp  parameters_manufactured_convergence_study.h  parameters_physics_model.cpp  parameters_physics_model.h
src/physics/: CMakeLists.txt  burgers.h  convection_diffusion.h  euler.cpp  euler.h  large_eddy_simulation.cpp  large_eddy_simulation.h  manufactured_solution.cpp  mhd.h  navier_stokes.cpp  navier_stokes.h  physics.cpp  physics.h  physics_factory.cpp
src/physics/initial_conditions/: initial_condition_function.cpp  initial_condition_function.h  set_initial_condition.cpp  set_initial_condition.h
src/physics/manufactured_solutions/: CMakeLists.txt  additive.cpp  additive.h  arctangent.cpp  arctangent.h  cosine.cpp  cosine.h  even_polynomial.cpp  even_polynomial.h  exponential.cpp  exponential.h  manufactured_solution.cpp  manufactured_solution.h  manufactured_solution_factory.cpp  manufactured_solution_factory.h  polynomial.cpp  polynomial.h  sine.cpp  sine.h
src/testing/: CMakeLists.txt  advection_explicit_periodic.cpp  burgers_stability.cpp  flow_solver_metric_field_evaluation.cpp  (+4 more)
(+27 files in other folders)
